# VisionScraper

./: .dockerignore  .gitignore  DEPLOYMENT_SUMMARY.md  README.md  main.py  pyproject.toml  requirements.txt  server.py  start_backend.sh  test_ocr.py
.github/workflows/: deploy.yml
Frontend/: next.config.ts  package-lock.json
Frontend/src/components/: BrowserView.tsx  GlassSurface.tsx
Frontend/src/hooks/: useAgentSession.ts
api/: DockerFile  deps.py  main.py
api/routes/: artifact_routes.py  perception_routes.py  plan_execute.py  plan_execute_loop.py  reasoner_routes.py  screencast_routes.py  session_routes.py
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/src/app/: globals.css  page.tsx
reasoner/: __init__.py  config.py  reasoner.py  schemas.py
reasoner/prompts/: action_prompt.txt  few_shot_examples.json
reasoner/tests/: test_reasoner.py
runner/: action_executor.py  browser_manager.py  browser_profile.py  config.py  errors.py  logger.py  metrics.py  paths.py  retry.py  run_demo.py  screenshot_service.py  session_manager.py
runner/perception/: perception_stub.py  ui_element.py  yolo_perception.py
scripts/: demo_action.py  demo_session.py  run_agent.py  test_async_playwright.py
src/: agent.py  tools.py
src/browser/: __init__.py  profile.py  session.py  views.py
src/components/: BrowserView.tsx  ReasoningPanel.tsx  ScrapeChat.tsx
src/dom/: __init__.py  service.py  views.py
src/dom/serializer/: __init__.py  (+1 more)
src/hooks/: useAgentSession.ts
tests/: test_action_executor.py  test_browser_profile.py
utils/: retry.py  storage.py
(+2 files in other folders)
